--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -44,6 +44,9 @@
         <action
             android:id="@+id/action_searchTripsFragment_to_tripDetailsFragment"
             app:destination="@id/tripDetailsFragment" />
+        <action
+            android:id="@+id/action_searchTripsFragment_to_filterBottomSheetDialog"
+            app:destination="@id/filterBottomSheetDialog" />
     </fragment>
     <fragment
         android:id="@+id/tripDetailsFragment"
@@ -54,29 +57,29 @@
         android:id="@+id/navigationRegistration"
         app:startDestination="@id/registerStepOneFragment">
         <fragment
-                android:id="@+id/registerStepOneFragment"
-                android:name="com.lod.rtviwe.tport.profile.registration.stepone.RegisterStepOneFragment"
-                android:label="RegisterStepOneFragment"
-                tools:layout="@layout/register_step_one_fragment">
+            android:id="@+id/registerStepOneFragment"
+            android:name="com.lod.rtviwe.tport.profile.registration.stepone.RegisterStepOneFragment"
+            android:label="RegisterStepOneFragment"
+            tools:layout="@layout/register_step_one_fragment">
             <action
                 android:id="@+id/action_registerStepOneFragment_to_registerStepTwoFragment"
                 app:destination="@+id/registerStepTwoFragment" />
         </fragment>
         <fragment
-                android:id="@+id/registerStepTwoFragment"
-                android:name="com.lod.rtviwe.tport.profile.registration.steptwo.RegisterStepTwoFragment"
-                android:label="RegisterStepTwoFragment"
-                tools:layout="@layout/register_step_two_fragment">
+            android:id="@+id/registerStepTwoFragment"
+            android:name="com.lod.rtviwe.tport.profile.registration.steptwo.RegisterStepTwoFragment"
+            android:label="RegisterStepTwoFragment"
+            tools:layout="@layout/register_step_two_fragment">
             <action
                 android:id="@+id/action_registerStepTwoFragment_to_registerStepThreeFragment"
                 app:destination="@id/registerStepThreeFragment"
                 app:popUpTo="@+id/main_graph" />
         </fragment>
         <fragment
-                android:id="@+id/registerStepThreeFragment"
-                android:name="com.lod.rtviwe.tport.profile.registration.stepthree.RegisterStepThreeFragment"
-                android:label="RegisterStepThreeFragment"
-                tools:layout="@layout/register_step_three_fragment">
+            android:id="@+id/registerStepThreeFragment"
+            android:name="com.lod.rtviwe.tport.profile.registration.stepthree.RegisterStepThreeFragment"
+            android:label="RegisterStepThreeFragment"
+            tools:layout="@layout/register_step_three_fragment">
             <action
                 android:id="@+id/action_registerStepThreeFragment_to_profileFragment"
                 app:destination="@id/profileFragment"
@@ -102,4 +105,9 @@
     <action
         android:id="@+id/action_global_navigation"
         app:destination="@id/navigationRegistration" />
+    <fragment
+        android:id="@+id/filterBottomSheetDialog"
+        android:name="com.lod.rtviwe.tport.search.searchtrip.FilterBottomSheetDialog"
+        android:label="FilterBottomSheetDialog"
+        tools:layout="@layout/filter_bottom_sheet" />
 </navigation>
