--- a/app/src/main/res/values/styles_button.xml
+++ b/app/src/main/res/values/styles_button.xml
@@ -31,4 +31,8 @@
         <!-- TODO -->
     </style>
 
+    <style name="SwitchButtonFilter" parent="Theme.MaterialComponents.Light">
+        <!-- TODO -->
+    </style>
+
 </resources>
