--- a/app/src/main/res/navigation/nav_graph_profile.xml
+++ b/app/src/main/res/navigation/nav_graph_profile.xml
@@ -2,7 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph_profile">
+    android:id="@+id/nav_graph_profile"
+    app:startDestination="@+id/navigationRegistration">
 
     <fragment
         android:id="@+id/profileFragment"
