--- a/app/src/main/res/layout/fragment_register_step_two.xml
+++ b/app/src/main/res/layout/fragment_register_step_two.xml
@@ -1,140 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scroll_view_step_two"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/text_view_did_send_code"
+        style="@style/TextViewInformation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="160dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/text_did_send_code"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_view_did_send_code"
-            style="@style/TextViewInformation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="160dp"
-            android:layout_marginEnd="32dp"
-            android:text="@string/text_did_send_code"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/text_view_phone_number"
+        style="@style/TextViewHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/text_view_did_send_code"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/text_view_did_send_code"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_did_send_code"
+        tools:text="@tools:sample/us_phones" />
 
-        <TextView
-            android:id="@+id/text_view_phone_number"
-            style="@style/TextViewHeader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/text_view_did_send_code"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/text_view_did_send_code"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_did_send_code"
-            tools:text="@tools:sample/us_phones" />
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/edit_text_input_code"
+        style="@style/EditTextCode"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:digits="0123456789 .-"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@tools:sample/us_zipcodes" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_input_code"
-            style="@style/EditTextCode"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+    <LinearLayout
+        android:id="@+id/group_code_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number">
+
+        <ImageView
+            android:id="@+id/image_view_code_first"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:digits="0123456789 .-"
-            android:inputType="number"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/image_view_code_first"
+            android:src="@drawable/code_placeholder"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@tools:sample/us_zipcodes" />
+            app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number" />
 
-        <LinearLayout
-            android:id="@+id/group_code_input"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number">
+        <ImageView
+            android:id="@+id/image_view_code_second"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/image_view_code_second"
+            android:src="@drawable/code_placeholder"
+            app:layout_constraintStart_toEndOf="@+id/image_view_code_first"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number" />
 
-            <ImageView
-                    android:id="@+id/image_view_code_first"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    android:contentDescription="@string/image_view_code_first"
-                    android:src="@drawable/code_placeholder"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number" />
+        <ImageView
+            android:id="@+id/image_view_code_third"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/image_view_code_third"
+            android:src="@drawable/code_placeholder"
+            app:layout_constraintStart_toEndOf="@+id/image_view_code_second"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number" />
 
-            <ImageView
-                    android:id="@+id/image_view_code_second"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    android:contentDescription="@string/image_view_code_second"
-                    android:src="@drawable/code_placeholder"
-                    app:layout_constraintStart_toEndOf="@+id/image_view_code_first"
-                    app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number" />
+        <ImageView
+            android:id="@+id/image_view_code_fourth"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/image_view_code_fourth"
+            android:src="@drawable/code_placeholder"
+            app:layout_constraintStart_toEndOf="@+id/image_view_code_third"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number" />
 
-            <ImageView
-                    android:id="@+id/image_view_code_third"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    android:contentDescription="@string/image_view_code_third"
-                    android:src="@drawable/code_placeholder"
-                    app:layout_constraintStart_toEndOf="@+id/image_view_code_second"
-                    app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number" />
+    </LinearLayout>
 
-            <ImageView
-                    android:id="@+id/image_view_code_fourth"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    android:contentDescription="@string/image_view_code_fourth"
-                    android:src="@drawable/code_placeholder"
-                    app:layout_constraintStart_toEndOf="@+id/image_view_code_third"
-                    app:layout_constraintTop_toBottomOf="@+id/text_view_phone_number" />
+    <TextView
+        android:id="@+id/text_view_did_get_code_question"
+        style="@style/TextViewInformation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/did_get_code_question"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/group_code_input" />
 
-        </LinearLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/button_resend_code"
+        style="@style/ButtonResendCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:text="@string/button_resend_code"
+        app:layout_constraintBottom_toBottomOf="@+id/text_view_did_get_code_question"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/text_view_did_get_code_question"
+        app:layout_constraintTop_toTopOf="@+id/text_view_did_get_code_question" />
 
-        <TextView
-            android:id="@+id/text_view_did_get_code_question"
-            style="@style/TextViewInformation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
-            android:text="@string/did_get_code_question"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/group_code_input" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_resend_code"
-            style="@style/ButtonResendCode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:text="@string/button_resend_code"
-            app:layout_constraintBottom_toBottomOf="@+id/text_view_did_get_code_question"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/text_view_did_get_code_question"
-            app:layout_constraintTop_toTopOf="@+id/text_view_did_get_code_question" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
