--- a/app/src/main/res/navigation/nav_graph_profile.xml
+++ b/app/src/main/res/navigation/nav_graph_profile.xml
@@ -9,7 +9,7 @@
         android:id="@+id/profileFragment"
         android:name="com.lod.rtviwe.tport.profile.ProfileFragment"
         android:label="ProfileFragment"
-        tools:layout="@layout/profile_fragment">
+        tools:layout="@layout/fragment_profile">
         <action
             android:id="@+id/action_profileFragment_to_registration"
             app:destination="@id/navigationRegistration" />
@@ -35,7 +35,9 @@
             <action
                 android:id="@+id/action_registerStepTwoFragment_to_registerStepThreeFragment"
                 app:destination="@id/registerStepThreeFragment"
-                app:popUpTo="@+id/nav_graph" />
+                app:launchSingleTop="true"
+                app:popUpTo="@+id/nav_graph_profile"
+                app:popUpToInclusive="true" />
         </fragment>
         <fragment
             android:id="@+id/registerStepThreeFragment"
@@ -49,7 +51,10 @@
         </fragment>
         <action
             android:id="@+id/action_global_profileFragment"
-            app:destination="@id/profileFragment" />
+            app:destination="@id/profileFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/nav_graph_profile"
+            app:popUpToInclusive="true" />
     </navigation>
 
     <action
