--- a/app/src/main/res/layout/fragment_bonuses_container.xml
+++ b/app/src/main/res/layout/fragment_bonuses_container.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scroll_view_bonuses_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".main.MainActivity">
 
     <fragment
@@ -15,4 +16,4 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph_bonuses" />
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
