--- a/app/src/main/res/layout/fragment_profile_container.xml
+++ b/app/src/main/res/layout/fragment_profile_container.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scroll_view_profile_fragment"
@@ -16,4 +16,4 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph_profile" />
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
