--- a/app/src/main/res/layout/fragment_search_container.xml
+++ b/app/src/main/res/layout/fragment_search_container.xml
@@ -5,6 +5,7 @@
     android:id="@+id/scroll_view_search_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".main.MainActivity">
 
     <fragment
