--- a/app/src/main/res/layout/fragment_search_trips.xml
+++ b/app/src/main/res/layout/fragment_search_trips.xml
@@ -26,6 +26,17 @@
             app:layout_constraintTop_toBottomOf="@+id/include_search_routes_toolbar"
             tools:listitem="@layout/recycler_view_item_1" />
 
+        <ProgressBar
+            android:id="@+id/progress_bar_search_trips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recycler_view_search_routes" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
