--- a/app/src/main/res/layout/popular_trip_item.xml
+++ b/app/src/main/res/layout/popular_trip_item.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view_popular_item"
     android:layout_width="match_parent"
-    android:layout_height="88dp"
-    android:layout_marginStart="16dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="23dp"
     android:layout_marginTop="8dp"
-    android:layout_marginEnd="16dp"
+    android:layout_marginEnd="23dp"
     android:layout_marginBottom="8dp"
+    android:translationZ="1dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -15,39 +17,69 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/text_view_popular_item_place_from"
             style="@style/TextViewOnPopularItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="2dp"
             android:elevation="1dp"
             android:translationZ="1dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/image_view_popular_item_background"
+            tools:text="@tools:sample/lorem" />
+
+        <TextView
+            android:id="@+id/text_view_minus"
+            style="@style/TextViewOnPopularItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:text="@string/minus"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_popular_item_place_from"
+            app:layout_constraintStart_toEndOf="@+id/text_view_popular_item_place_from"
+            app:layout_constraintTop_toTopOf="@+id/text_view_popular_item_place_from" />
 
         <TextView
             android:id="@+id/text_view_popular_item_place_to"
             style="@style/TextViewOnPopularItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="2dp"
             android:elevation="1dp"
             android:translationZ="1dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_popular_item_place_from" />
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_minus"
+            app:layout_constraintStart_toEndOf="@+id/text_view_minus"
+            app:layout_constraintTop_toTopOf="@+id/text_view_minus"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="@tools:sample/lorem" />
 
         <ImageView
             android:id="@+id/image_view_popular_item_background"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="122dp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/popular_background_description"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/text_view_route_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="TBD"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/text_view_popular_item_place_from"
+            app:layout_constraintTop_toBottomOf="@+id/text_view_popular_item_place_from" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
