--- a/app/src/main/res/values/styles_button.xml
+++ b/app/src/main/res/values/styles_button.xml
@@ -15,6 +15,7 @@
 
     <style name="ButtonPickUp" parent="Widget.MaterialComponents.Button">
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="ButtonContinue" parent="Widget.MaterialComponents.Button.TextButton">
