--- a/app/src/main/res/values/styles_text_view.xml
+++ b/app/src/main/res/values/styles_text_view.xml
@@ -3,12 +3,12 @@
 
     <style name="TextViewOnSearchItem" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@color/colorDefaultText</item>
     </style>
 
     <style name="TextViewOnPopularItem" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="TextViewTitleItem" parent="Theme.MaterialComponents.Light">
@@ -48,6 +48,7 @@
 
     <style name="TextViewOrderSmallHeader" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">19sp</item>
+        <!--<item name="android:typeface"></item>-->
         <item name="android:textColor">@android:color/black</item>
     </style>
 
