--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#007AFF</color>
     <color name="colorPrimaryDark">#E0E0E0</color>
-    <color name="colorPrimaryRipple">#42004FCB</color>
+    <color name="colorPrimaryRipple">#42E0E0E0</color>
     <color name="colorAccent">#007AFF</color>
     <color name="colorTransparent">#00FFFFFF</color>
     <color name="colorButtonBackground">#FFFFFF</color>
@@ -12,4 +12,5 @@
     <color name="colorConnectionRectangle">#ADADAD</color>
     <color name="colorLightHeader">#797A79</color>
     <color name="colorFilterSeekbar">#F9A825</color>
+    <color name="searchBackgroundGradient">#00000000</color>
 </resources>
