--- a/app/src/main/res/layout/logo_item.xml
+++ b/app/src/main/res/layout/logo_item.xml
@@ -2,17 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginTop="32dp"
     android:layout_marginEnd="16dp"
+    android:elevation="10dp"
     android:layout_marginBottom="32dp">
 
     <ImageView
         android:id="@+id/image_view_logo"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:contentDescription="@string/image_view_logo_description"
         android:scaleType="centerCrop"
