--- a/app/src/main/res/values/styles_text_view.xml
+++ b/app/src/main/res/values/styles_text_view.xml
@@ -2,13 +2,18 @@
 <resources>
 
     <style name="TextViewOnSearchItem" parent="Theme.MaterialComponents.Light">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/colorDefaultText</item>
     </style>
 
-    <style name="TextViewOnPopularItem" parent="Theme.MaterialComponents.Light">
-        <item name="android:textSize">16sp</item>
+    <style name="TextViewHeaderOnPopularItem" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="TextViewDescriptionOnPopularItem" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/colorDefaultText</item>
     </style>
 
     <style name="TextViewTitleItem" parent="Theme.MaterialComponents.Light">
@@ -47,8 +52,7 @@
     </style>
 
     <style name="TextViewOrderSmallHeader" parent="Theme.MaterialComponents.Light">
-        <item name="android:textSize">19sp</item>
-        <!--<item name="android:typeface"></item>-->
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
 
@@ -113,6 +117,11 @@
 
     <style name="TextViewFilterAction" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="TextViewDatePickerHeader" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
 
