--- a/app/src/main/res/values/styles_text_view.xml
+++ b/app/src/main/res/values/styles_text_view.xml
@@ -112,7 +112,8 @@
     </style>
 
     <style name="TextViewExtendedFab" parent="Theme.MaterialComponents.Light">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="TextViewFilterAction" parent="Theme.MaterialComponents.Light">
